syntax = "proto3";

package hello;

option go_package = "github.com/hanpham03/grpc-demo/server/proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}